# REx_PyTorch

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
CHI_code/: Dockerfile  README.md  pyproject.toml  run.sh  script.sh
CHI_code/code/: options.py
CHI_code/code/data/other_codes/: create_vocab.py  lca_finder.py  test_beam_parser.py
CHI_code/code/model/: agent.py  environment.py  trainer.py
CHI_code/datasets/hetionet_dr/vocab/: entity_vocab.json
CHI_code/datasets/hetionet_dt/: graph_labels.tsv
CHI_code/personas/: leo.txt
REx_code/: Dockerfile  pyproject.toml  run.sh
REx_code/code/: options.py
REx_code/code/data/: feed_data.py  grapher.py
REx_code/code/data/other_codes/: create_vocab.py  path_parser.py  rex_for_visualization.py
REx_code/code/model/: environment.py  trainer.py
REx_code/configs/: hetionet.sh  oregano.sh  primekg.sh
REx_code/datasets/oregano/: dev.txt  test.txt  train.txt
REx_code/datasets/oregano/vocab/: relation_vocab.json
REx_code/datasets/primekg/vocab/: entity_vocab.json  relation_vocab.json
code/: options.py
code/data/: feed_data.py  grapher.py
code/data/other_codes/: lca_finder.py  test_beam_parser.py
code/model/: agent.py  baseline.py  environment.py  score_external.py  trainer.py
configs/: hetionet_dr.sh  hetionet_dti.sh
configs/hetionet/drug_repurposing/: hetionet_dr.sh  insigth_driven.sh  mechanistic_analyst.sh  neutral_evaluator.sh
configs/hetionet/drug_target/: insigth_driven.sh  mechanistic_analyst.sh  (+1 more)
datasets/hetionet_dt/: test.txt
personas/: elena.txt  leo.txt  mechanistic_analyst.txt
(+94 files in other folders)
