[project]
name = "rl-drex"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "numpy==2.2.6",
    "openai>=2.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "tensorboard>=2.14.0",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "torch-geometric>=2.5.0",
    "transformers>=5.3.0",
    "accelerate>=0.26.0",
]
