[project]
name = "rl-drex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "networkx>=2.6.3",
    "numpy==1.18.0",
    "protobuf==3.20.0",
    "scipy>=1.7.3",
    "tensorboard>=1.15.0",
    "tensorflow==1.15.0",
    "torch>=1.13.1",
    "tqdm>=4.67.1",
]
